--- a/src/main/resources/templates/state.html
+++ b/src/main/resources/templates/state.html
@@ -416,7 +416,7 @@
       <section class="wrapper">
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa fa-bars"></i> List of States</h3>
+            <h3 class="page-header"><i class="fa fa fa-bars"></i> List of States/provinces</h3>
             <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="fa fa-bars"></i>Pages</li>
@@ -427,7 +427,7 @@
         <!-- page start-->
       <div class="row">
       <div class="col-lg-12">
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal"> Add State </button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal"> New State/Province </button>
        <table class="table">
                 <thead>
                   <tr>
@@ -481,18 +481,14 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add State</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Add State/Province</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      
       <div class="modal-body">
         <form th:action="@{/states/addNew}" method="post">
-          <!--  <div class="form-group">
-            <label for="recipient-name" class="col-form-label">id:</label>
-            <input type="text" class="form-control" id="idAdd" name="id" disable>
-          </div> -->
-          
           <div class="form-group">
 		    <label for="ddlCountryDetails" class="col-form-label">Country: </label>
 			    <select class="form-control" id="ddlCountryAdd" name="countryid">
@@ -503,6 +499,7 @@
 				   </option>
 			    </select>				    
 		  </div>
+		  
 		  <div>
             <label for="nameAdd" class="col-form-label">Name:</label>
             <input type="text" class="form-control" id="nameAdd" name="name" required>
@@ -522,6 +519,7 @@
             <label for="detailsEdit" class="col-form-label">Details:</label>
             <input type="text" class="form-control" id="detailsAdd" name="details">
             </div>
+            
            <div class="form-group">
              <button type="submit" class="btn btn-primary">Submit</button>
           </div>
@@ -549,22 +547,17 @@
       </div>
       <div class="modal-body">
        <form> 
-        <div class="form-group">
-            <label for="recipient-name" class="col-form-label">id:</label>
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Id:</label>
             <input type="text" class="form-control" id="detailsId" name="id" readonly>
           </div>
           
-          <div class="form-group">
-		    <label for="deatilsDdlCountry" class="col-form-label">Country: </label>
-			    <select class="form-control" id="deatilsDdlCountry" name="countryid" readonly>
-			       <option>-SELECT-</option>			    
-			       <option th:each="country:${countries}"
-				        th:value="${country.id}"
-				        th:text="${country.description}">
-				   </option>
-			    </select>				    
-		  </div>
-		  <div>
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Country:</label>
+            <input type="text" class="form-control" id="detailsCountryName" readonly>
+          </div>
+          
+          <div>
             <label for="detailsName" class="col-form-label">Name:</label>
             <input type="text" class="form-control" id="detailsName" name="name" readonly>
           </div>
@@ -599,15 +592,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Update State</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Update State/Province </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      
       <div class="modal-body">
        <form th:action="@{/states/update}" method="put"> 
         <div class="form-group">
-            <label for="recipient-name" class="col-form-label">id:</label>
+            <label for="recipient-name" class="col-form-label">Id:</label>
             <input type="text" class="form-control" id="idEdit" name="id" readonly>
           </div>
           
@@ -621,6 +615,7 @@
 				   </option>
 			    </select>				    
 		  </div>
+		  
 		  <div class="form-group">
             <label for="nameAdd" class="col-form-label">Name:</label>
             <input type="text" class="form-control" id="nameEdit" name="name" required>
@@ -640,6 +635,7 @@
             <label for="detailsEdit" class="col-form-label">Details:</label>
             <input type="text" class="form-control" id="detailsEdit" name="details">
             </div>
+            
            <div class="form-group">
              <button type="submit" class="btn btn-primary">Submit</button>
           </div>
