--- a/src/main/resources/templates/country.html
+++ b/src/main/resources/templates/country.html
@@ -542,7 +542,7 @@
       <div class="modal-body">
         <form>
         <div class="form-group">
-            <label for="recipient-name" class="col-form-label">id:</label>
+            <label for="recipient-name" class="col-form-label">Id:</label>
             <input type="text" class="form-control" id="detailsId" name="id" readonly>
           </div>
            <div class="form-group">
@@ -607,7 +607,7 @@
       <div class="modal-body">
        <form th:action="@{/countries/update}" method="put"> 
          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">id:</label>
+            <label for="recipient-name" class="col-form-label">Id:</label>
             <input type="text" class="form-control" id="editId" name="id" readonly>
           </div>
            <div class="form-group">
