--- a/src/main/resources/templates/invoice.html
+++ b/src/main/resources/templates/invoice.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Mange Invoice Page</title>
+  <title>Manage Invoice Page</title>
 
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -416,7 +416,7 @@
       <section class="wrapper">
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa fa-bars"></i> Pages</h3>
+            <h3 class="page-header"><i class="fa fa fa-bars"></i> List of Invoices</h3>
             <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="fa fa-bars"></i>Pages</li>
@@ -424,8 +424,46 @@
             </ol>
           </div>
         </div>
-        <!-- page start-->
-        Show Invoices list
+          <!-- page start-->
+      <div class="row">
+      <div class="col-lg-12">
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal"> New Invoice </button>
+       <table class="table">
+                <thead>
+                  <tr>
+                    
+                    <th>ID</th>
+                    <th>Date</th>
+                    <th>Client</th>
+                    <th>Remarks</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="invoice: ${invoices}" >
+                    <td th:text= "${invoice.getId()}"> </td>
+                    <td th:text= "${invoice.getInvoiceDate()}"> </td>
+                    <td th:text="${invoice.getClient().getName()}"> 
+                    <td th:text= "${invoice.getRemarks()}"> </td>
+                   
+                    
+                    
+                    <td>
+                    
+                    <div class="btn-group">
+                    
+                    <a  th:href="@{invoices/findById/(id=${invoice.id})}" class="btn btn-primary" id="editButton"><i class="icon_pencil-edit"></i></a>
+                    <a  th:href="@{invoices/findById/(id=${invoice.id})}" class="btn btn-success" id="detailsButton"><i class="icon_document_alt"></i></a>
+                    <a  th:href="@{invoices/delete/(id=${invoice.id})}"  class="btn btn-danger" id="deleteButton"><i class="icon_close_alt2"></i></a>
+                    </div>
+                    
+                    
+                    </td>
+                  </tr>
+              </tbody>
+              </table>
+       </div>
+       </div>
         <!-- page end-->
       </section>
     </section>
@@ -438,10 +476,240 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
           -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+       <!--    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
         </div>
     </div>
   </section>
+  
+ 
+ 
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add Invoice</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form th:action="@{/invoices/addNew}" method="post">
+        
+        
+       
+          <div>
+            <label for="invoiceDateAdd" class="col-form-label">Invoice Date:</label>
+            <input type="date" class="form-control" id="invoiceDateAdd" name="invoiceDate" required>
+          </div>
+          
+            <div class="form-group">
+		    <label for="ddlInvoiceStatusAdd" class="col-form-label"> Invoice Status: </label>
+			    <select class="form-control" id="ddlInvoiceStatusAdd" name="invoicestatusid">
+			       <option>-SELECT-</option>			    
+			       <option th:each="invoiceStatus:${invoiceStatuses}"
+				        th:value="${invoiceStatus.id}"
+				        th:text="${invoiceStatus.description}">
+				   </option>
+			    </select>				    
+		  </div>
+          
+        
+          <div class="form-group">
+		    <label for="ddlClientAdd" class="col-form-label">Client: </label>
+			    <select class="form-control" id="ddlClientAdd" name="clientid">
+			       <option>-SELECT-</option>			    
+			       <option th:each="client:${clients}"
+				        th:value="${client.id}"
+				        th:text="${client.name}">
+				   </option>
+			    </select>				    
+		  </div>
+		  
+		  
+		  
+		
+          
+         <div class="form-group">
+            <label for="remarksAdd" class="col-form-label">Remarks:</label>
+            <input type="text" class="form-control" id="remarksAdd" name="remarks" required>
+          </div>
+        
+     
+            
+             <button type="submit" class="btn btn-primary">Save</button>
+         
+        
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Client Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form >
+        
+         <div>
+            <label for="idAdd" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idDetails" name="id" disable>
+          </div>
+       
+          <div>
+            <label for="dateDetails" class="col-form-label">Invoice Date:</label>
+            <input type="date" class="form-control" id="dateDetails" name="invoiceDate" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Invoice Status:</label>
+            <input type="text" class="form-control" id="ddlInvoiceStatusDetails" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Client:</label>
+            <input type="text" class="form-control" id="ddlClientDetails" readonly>
+          </div>
+            <!--  <div class="form-group">
+		    <label for="ddlInvoiceStatusDetails" class="col-form-label">Invoice Status: </label>
+			    <select class="form-control" id="ddlInvoiceStatusDetails" name="invoicestatusid" readonly>
+			       <option>-SELECT-</option>			    
+			       <option th:each="invoiceStatus:${invoiceStatuses}"
+				        th:value="${invoiceStatus.id}"
+				        th:text="${invoiceStatus.description}">
+				   </option>
+			    </select>				    
+		  </div>
+          
+        
+          <div class="form-group">
+		    <label for="ddlClientDetails" class="col-form-label">Client: </label>
+			    <select class="form-control" id="ddlClientDetails" name="clientid" readonly>
+			       <option>-SELECT-</option>			    
+			       <option th:each="client:${clients}"
+				        th:value="${client.id}"
+				        th:text="${client.name}">
+				   </option>
+			    </select>				    
+		  </div> -->
+		 
+		  <div class="form-group">
+            <label for="remarksDetails" class="col-form-label">Remarks:</label>
+            <input type="text" class="form-control" id="remarksDetails" name="remarks" readonly>
+          </div>
+         
+     
+              </form>
+      </div>
+     
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Update Invoice</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <form th:action="@{/invoices/update}" method="put"> 
+         <div>
+            <label for="idEdit" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idEdit" name="id" disable>
+          </div>
+       
+          <div>
+            <label for="dateEdit" class="col-form-label">Invoice Date:</label>
+            <input type="date" class="form-control" id="dateEdit" name="invoiceDate" >
+          </div>
+          
+            <div class="form-group">
+		    <label for="ddlInvoiceStatusEdit" class="col-form-label">Invoice Status: </label>
+			    <select class="form-control" id="ddlInvoiceStatusEdit" name="invoicestatusid" >
+			       <option>-SELECT-</option>			    
+			       <option th:each="invoiceStatus:${invoiceStatuses}"
+				        th:value="${invoiceStatus.id}"
+				        th:text="${invoiceStatus.description}">
+				   </option>
+			    </select>				    
+		  </div>
+          
+        
+          <div class="form-group">
+		    <label for="ddlClientEdit" class="col-form-label">Client: </label>
+			    <select class="form-control" id="ddlClientEdit" name="clientid" >
+			       <option>-SELECT-</option>			    
+			       <option th:each="client:${clients}"
+				        th:value="${client.id}"
+				        th:text="${client.name}">
+				   </option>
+			    </select>				    
+		  </div>
+		  
+		  
+		
+          
+         <div class="form-group">
+            <label for="remarksEdit" class="col-form-label">Remarks:</label>
+            <input type="text" class="form-control" id="remarksEdit" name="remarks">
+          </div>
+           <button type="submit" class="btn btn-primary">Submit</button>
+     
+           
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="modal" id="deleteModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Delete</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Do you want to delete the item?</p>
+      </div>
+      <div class="modal-footer">
+      <a class="btn btn-primary" id="confirmDeleteButton" href="">Confirm</a>
+     
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+  
   <!-- container section end -->
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
@@ -451,8 +719,7 @@
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
-
-
+ <script src="js/invoice.js"></script>
 </body>
 
 </html>
