--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -434,7 +434,7 @@
        <table class="table">
                 <thead>
                   <tr>
-                    
+                    <th> Photo </th>
                     <th>Name</th>
                     <th>Website</th>
                     <th>Email</th>
@@ -444,7 +444,13 @@
                   </tr>
                 </thead>
                 <tbody>
+                  
                   <tr th:each="client: ${clients}" >
+                  <td>
+                   <a id="photoButton" th:href="@{'/img/photos/' + ${client.getId()} +'.jpg'}">
+                    <img th:src="@{'/img/photos/' + ${client.getId()} +'.jpg'}" width="40" height="40">
+                    </a>
+                    </td>
                     <td th:text= "${client.getName()}"> </td>
                     <td th:text= "${client.getWebsite()}"> </td>
                     <td th:text="${client.getEmail()}"> </td>
@@ -824,6 +830,25 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="photoModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Photo</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      		<img id="clientPhoto" src="" width="90%" height="90%">
+    </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div> 
   
   <!-- container section end -->
     <div class="text-right">
