--- a/src/main/resources/templates/vehicleModel.html
+++ b/src/main/resources/templates/vehicleModel.html
@@ -532,19 +532,36 @@
       <div class="modal-body">
       <form>
            <div class="form-group">
-            <label for="idDetails" class="col-form-label">id:</label>
+            <label for="idDetails" class="col-form-label">Id:</label>
             <input type="text" class="form-control" id="idDetails" name="id" readonly>
           </div> 
          
 		  
 		   <div class="form-group">
-            <label for="descriptionAdd" class="col-form-label">Description:</label>
+            <label for="descriptionDetails" class="col-form-label">Description:</label>
             <input type="text" class="form-control" id="descriptionDetails" name="description" readonly>
           </div>
           
          <div class="form-group">
-            <label for="detailsAdd" class="col-form-label">Details:</label>
+            <label for="detailsDetails" class="col-form-label">Details:</label>
             <input type="text" class="form-control" id="detailsDetails" name="details" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="createdByDetails" class="col-form-label">Created By:</label>
+            <input type="text" class="form-control" id="createdByDetails" name="createdBy" readonly>
+          </div>
+           <div class="form-group">
+            <label for="createdDateDetails" class="col-form-label">Created Date:</label>
+            <input type="text" class="form-control" id="createdDateDetails" name="createdDate" readonly>
+          </div>
+           <div class="form-group">
+            <label for="lastModifiedByDetails" class="col-form-label">Last Updated By:</label>
+            <input type="text" class="form-control" id="lastModifiedByDetails" name="lastModifiedBy" readonly>
+          </div>
+           <div class="form-group">
+            <label for="lastModifiedDateDetails" class="col-form-label">Last Updated On:</label>
+            <input type="text" class="form-control" id="lastModifiedDateDetails" name="lastModifiedDate" readonly>
           </div>
           
         </form>
