--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -272,9 +272,9 @@
           <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="img/avatar1_small.jpg">
+                                <img alt="" th:src="@{'img/photos/' + ${#authentication.getPrincipal().getUsername()} +'.jpg'}" style="width:40px;height:40px;">
                             </span>
-                            <span class="username">Jenifer Smith</span>
+                            <span class="username" th:text="${#authentication.getPrincipal().getUsername()}">Guest</span>
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
