--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,23 +41,23 @@
 
   <div class="container">
 
-    <form class="login-form" action="index.html">
+    <form class="login-form" th:action="@{/login}" method="post">
       <div class="login-wrap">
         <p class="login-img"><i class="icon_lock_alt"></i></p>
         <div class="input-group">
           <span class="input-group-addon"><i class="icon_profile"></i></span>
-          <input type="text" class="form-control" placeholder="Username" autofocus>
+          <input type="text" class="form-control" placeholder="Username" autofocus name="username">
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="icon_key_alt"></i></span>
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
         <label class="checkbox">
                 <input type="checkbox" value="remember-me"> Remember me
                 <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
             </label>
         <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-        <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
+        <a th:href="@{/register}" class="btn btn-info btn-lg btn-block" >Signup</a>
       </div>
     </form>
     <div class="text-right">
